// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Panel Defaults play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel TextAlignedVertical smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31">
    <div class="_panelGraphic_ymo8g_44">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <h3 class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 ">
        En overskrift
      </h3>
      Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31">
    <div class="_panelGraphic_ymo8g_44">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <h3 class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 ">
        En overskrift
      </h3>
      Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
    </div>
  </div>
</div>
`;

exports[`Tester/Panel TextShortAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31">
    <div class="_panelGraphic_ymo8g_44">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <h3 class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 ">
        Kort tittel
      </h3>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Kort test ...
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel VariantFilled smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div id="htmlId"
       class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112  dummyClassname"
       lang="nb"
       data-testid="123ID"
  >
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithClassNameOverridesPanelWidthAndPadding smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112  dummyPanelOverridesWidthAndPadding">
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithColorAndVariant smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: ochre
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_forest_ymo8g_78 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: forest
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_burgundy_ymo8g_82 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: burgundy
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_denim_ymo8g_86 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: denim
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_graphite_ymo8g_90 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: graphite
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: ochre
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_forest_ymo8g_78 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: forest
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_burgundy_ymo8g_82 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: burgundy
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_denim_ymo8g_86 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: denim
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_graphite_ymo8g_90 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      color: graphite
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideGraphicMobileAndIcon smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31 _panel_graphicIconHide_ymo8g_35">
    <div class="_panelGraphic_ymo8g_44 _panelGraphicHide_ymo8g_50">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31 _panel_graphicIconHide_ymo8g_35">
    <div class="_panelGraphic_ymo8g_44 _panelGraphicHide_ymo8g_50">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideGraphicMobileAndIconDesktop smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31 _panel_graphicIconHide_ymo8g_35">
    <div class="_panelGraphic_ymo8g_44 _panelGraphicHide_ymo8g_50">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31 _panel_graphicIconHide_ymo8g_35">
    <div class="_panelGraphic_ymo8g_44 _panelGraphicHide_ymo8g_50">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideGraphicMobileAndImage smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44 _panelGraphicHide_ymo8g_50">
      <img src="[REMOVED]"
           alt
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44 _panelGraphicHide_ymo8g_50">
      <img src="[REMOVED]"
           alt
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideGraphicMobileAndImageDesktop smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44 _panelGraphicHide_ymo8g_50">
      <img src="[REMOVED]"
           alt
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44 _panelGraphicHide_ymo8g_50">
      <img src="[REMOVED]"
           alt
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideSubtitle play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <h4 class="_heading_1okn6_1 _heading_level5_1okn6_47 _heading_hasSpacingExtraSmall_1okn6_51 _srOnly_ymo8g_137">
        Det er en undertittel
      </h4>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithHideTitle play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <h3 class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 _srOnly_ymo8g_137">
        Det er en tittel
      </h3>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithIcon play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31">
    <div class="_panelGraphic_ymo8g_44">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31">
    <div class="_panelGraphic_ymo8g_44">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithIconMobile smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31">
    <div class="_panelGraphic_ymo8g_44">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicIcon_ymo8g_31">
    <div class="_panelGraphic_ymo8g_44">
      <svg class="_systemIcon_6zbcy_2 _systemIcon_extraLarge_6zbcy_17 "
           viewbox="0 0 24 24"
           focusable="false"
           aria-hidden="true"
           role="img"
      >
        <path d="M13 9h-2V7h2v2Zm0 8h-2v-6h2v6ZM12 2C6.477 2 2 6.477 2 12A10 10 0 1 0 12 2Z">
        </path>
      </svg>
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithImage play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44">
      <img src="[REMOVED]"
           alt
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44">
      <img src="[REMOVED]"
           alt
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithImageMobile smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44">
      <img src="[REMOVED]"
           alt
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44">
      <img src="[REMOVED]"
           alt
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithImageSourceAltText play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44">
      <img src="[REMOVED]"
           alt="Bonde med ku"
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112 _panel_graphicImage_ymo8g_26">
    <div class="_panelGraphic_ymo8g_44">
      <img src="[REMOVED]"
           alt="Bonde med ku"
           class="_panelImage_ymo8g_70"
      >
    </div>
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithPadding smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingS_ymo8g_94 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: s
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingS_ymo8g_94 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: s
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingM_ymo8g_97 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: m
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingM_ymo8g_97 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: m
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingL_ymo8g_100 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: l
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingL_ymo8g_100 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: l
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: xl
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: xl
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXXL_ymo8g_106 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: xxl
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingXXL_ymo8g_106 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: xxl
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingMEGA_ymo8g_109 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: mega
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_filled_ymo8g_20 _panel_ochre_ymo8g_74 _panel_paddingMEGA_ymo8g_109 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <div>
        padding: mega
      </div>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithRef play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112"
       id="dummyIdForwardedFromRef"
  >
    <div class="_panelArticle_ymo8g_64">
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithSpacing smoke-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      spacing: xxs
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXS_ymo8g_115">
    <div class="_panelArticle_ymo8g_64">
      spacing: xs
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingS_ymo8g_118">
    <div class="_panelArticle_ymo8g_64">
      spacing: s
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingM_ymo8g_121">
    <div class="_panelArticle_ymo8g_64">
      spacing: m
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingL_ymo8g_124">
    <div class="_panelArticle_ymo8g_64">
      spacing: l
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXL_ymo8g_127">
    <div class="_panelArticle_ymo8g_64">
      spacing: xl
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXL_ymo8g_130">
    <div class="_panelArticle_ymo8g_64">
      spacing: xxl
    </div>
  </div>
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingMEGA_ymo8g_133">
    <div class="_panelArticle_ymo8g_64">
      spacing: mega
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithSubtitle play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <h4 class="_heading_1okn6_1 _heading_level5_1okn6_47 _heading_hasSpacingExtraSmall_1okn6_51 ">
        Det er en undertittel
      </h4>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithSubtitleAs play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <h2 class="_heading_1okn6_1 _heading_level5_1okn6_47 _heading_hasSpacingExtraSmall_1okn6_51 ">
        Det er en undertittel med valgt heading nivå
      </h2>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithTitle play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <h3 class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 ">
        Det er en tittel
      </h3>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17  ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
    </div>
  </div>
</div>
`;

exports[`Tester/Panel WithTitleAs play-test 1`] = `
<div data-test-block="true">
  <div class="_panel_ymo8g_5 _panel_outline_ymo8g_15 _panel_ochre_ymo8g_74 _panel_paddingXL_ymo8g_103 _panel_spacingXXS_ymo8g_112">
    <div class="_panelArticle_ymo8g_64">
      <h1 class="_heading_1okn6_1 _heading_level3_1okn6_34 _heading_hasSpacingSmall_1okn6_54 ">
        Det er en tittel
      </h1>
      <p class="_paragraph_32eqi_1 _paragraph_standard_32eqi_17 _paragraph_hasSpacingLarge_32eqi_23 ">
        Lorem ipsum dolor sit amet. Alle som har laget en nettside, trengt litt fylltekst eller bare surfet rundt på nettet har antageligvis sett disse ordene, etterfulgt av en tilsynelatende eviglang tekst fylt med latinske liksomsetninger.
      </p>
      <button class="_button_6ybyo_1 _button_primary_6ybyo_1   "
              type="button"
      >
        <span class="_buttonText_6ybyo_69">
          Trykk på meg
        </span>
      </button>
    </div>
  </div>
</div>
`;
